--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="#" rel="datapage2">Admin Portal</a></li>
         </ul>
         
-        <div style="border:1px solid gray; width:900px; margin-bottom: 1em; padding: 10px">
+        <div style="border:1px solid gray; width:900%; margin-bottom: 1em; padding: 10px">
         
         <div id="datapage1" class="tabcontent">
                 <script type="text/javascript" src="https://c6cre451.caspio.com/dp/a5908000396df0dbd45947caa571/emb"></script>
